# LLaMA-infer

./: .gitignore  README.md
llama/: CMakeLists.txt
llama/include/: model.h  sampler.h  tokenizer.h
llama/src/: main.c  model.c  sampler.c  tokenizer.c
